elasticsearch-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: elasticsearch
  labels:
    tier: db
    test: public
    app: elasticsearch

spec:
  replicas: 1
  template: #under template section is pod configuration as pod yaml
    metadata:
      name: elasticsearch
      labels:
        tier: db
        test: public
        app: elasticsearch

    spec:
      containers:
        - name: elasticsearch
          image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: db-data
          ports:
            - containerPort: 9200
              name: port9200
      #need to delegate permission on node path in order to let k8s service use that dir
      volumes:
        - name: db-data
          hostPath:
            # directory location on host
            path: /mnt/db-data
            # this field is optional
            type: DirectoryOrCreate 
  selector:
    matchLabels:
      tier: db
      test: public
      app: elasticsearch
