elasticsearch1-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: elasticsearch1
  labels:
    tier: db1
    test: public
    app: elasticsearch

spec:
  replicas: 1
  template: #under template section is pod configuration as pod yaml
    metadata:
      name: elasticsearch1
      labels:
        tier: db1
        test: public
        app: elasticsearch

    spec:
      containers:
        - name: elasticsearch1
          image: docker.elastic.co/elasticsearch/elasticsearch:7.5.2
          ports:
            - containerPort: 9200
              name: port9200
  selector:
    matchLabels:
      tier: db1
      test: public
      app: elasticsearch
