kibana-deployment.yml
#docker.elastic.co/kibana/kibana:7.10.2
#-p 5601:5601
#- ./kibana.yml:/usr/share/kibana/config/kibana.yml
#    environment:
#      SERVER_NAME: kibana.example.org
#      ELASTICSEARCH_HOSTS: http://elasticsearch.example.org

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana-oss:7.5.2
        #image: docker.elastic.co/kibana/kibana-oss:6.2.4
        securityContext:
          privileged: true
        #volumeMounts:
        #  - mountPath: /usr/share/kibana/config/kibana.yml
        #    name: kibana-conf
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
      #volumes:
      #  - name: kibana-conf
      #    hostPath:
      #      # directory location on host
      #      path: /db-data/kibana-data/kibana.yml
      #      # this field is optional
      #      type: FileOrCreate
