nginx-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  labels:
    tier: web

spec:
  replicas: 1
  template: #under template section is pod configuration as pod yaml
    metadata:
      name: nginx
      labels:
        tier: web

    spec:
      containers:
        - name: nginx
          image: nginx
          ports:
            - containerPort: 80
              name: port80
  selector:
    matchLabels:
      tier: web
