kibana-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana-lb
spec:
  selector:
    app: kibana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5601
  type: LoadBalancer
  loadBalancerIP: 192.168.2.203
