kibana1-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana1
  labels:
    app: kibana1

spec:
  type: NodePort
  ports:
    - targetPort: 5601 #port on the pod
      port: 5601 #port of the service itself
      nodePort: 30003 #30000-32767 #port of the node
  selector: #must be the same with pod label
    app: kibana1
