nginx-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    tier: web

spec:
  type: NodePort
  ports:
    - targetPort: 80 #port on the pod
      port: 80 #port of the service itself
      nodePort: 30080 #30000-32767 #port of the node
  selector: #must be the same with pod label
    tier: web
