result-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: result-lb
spec:
  selector:
    tier: frontend2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 192.168.2.202
