vote-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: vote-lb
spec:
  selector:
    tier: frontend1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
  loadBalancerIP: 192.168.2.201
  
#status:
#  loadBalancer:
#    ingress:
#    - ip: 192.0.2.127
