example.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  backend:
    serviceName: other
    servicePort: 8080
  rules:
  - host: foo.mydomain.com
    http:
      paths:
      - backend:
          serviceName: foo
          servicePort: 8080
  - host: mydomain.com
    http:
      paths:
      - path: /bar/*
        backend:
          serviceName: bar
          servicePort: 8080

---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
 name: game
 namespace: default
 labels:
 environment: production
 annotations:
 kubernetes.io/ingress.class: nginx
 nginx.ingress.kubernetes.io/rewrite-target: /$2
 nginx.ingress.kubernetes.io/use-regex: ‘true’
spec:
 rules:
    — host: game.mydomain-name.com
      http:
        paths:
         — path: /game-2048(/|$)(.*)
           backend:
             serviceName: game-2048-default
             servicePort: 80
