nginx-metallb-ingress.yml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-metallb
  labels:
    app: nginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: ‘true’

spec:
#  backend:
#    serviceName: other
#    servicePort: 8080
  rules:
  - host: nginx-metallb.wayuslatan.com
    http:
      paths:
      - path:  
        backend:
          serviceName: elasticsearch
          servicePort: 9200
